# vantage-sdk-python

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  DOCUMENTING.md  Dockerfile  Makefile  README-tests.md  README.md  buildspec.yaml  conftest.py  index.html  linux-packages.txt  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: integration_tests_wiremock.yml  publish_docs.yml  pypi_release.yml  pytest.yml  release.yml  test_pypi_release.yml
api/: index.html
docs/: DeveloperREADME.md  api.md  index.md  installation.md  usage.md
docs/stylesheets/: extra.css
examples/: README.md  initial_example.py
examples/notebooks/: README.md
examples/notebooks/getting_started/: README.md  initializing_the_client.ipynb
examples/notebooks/getting_started/management_api/: account_management.ipynb  collection_management.ipynb  documents_upload.ipynb  external_api_keys.ipynb  vantage_api_keys.ipynb
examples/notebooks/getting_started/search_api/: embedding_search.ipynb  more_like_these_search.ipynb  more_like_this_search.ipynb  semantic_search.ipynb
examples/notebooks/use_cases/: README.md  starter.ipynb
examples/scripts/: initial_example.py
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  docker-compose.yml  test_vantage.py  test_vantage_sdk_python.py
tests/data/: documents.jsonl  hello_world.parquet  small_documents.jsonl
tests/data/mock_api/: conftest-cleanup-api_keys.json  conftest-cleanup-collections.json  test_account-test_get_account.json  test_account-test_get_non_existing_account.json  test_account-test_update_account.json  test_account-test_update_non_existing_account.json  test_api_keys-test_create_admin_vantage_api_key.json  test_api_keys-test_create_external_api_key.json  test_api_keys-test_create_full_vantage_api_key.json  test_api_keys-test_create_query_only_vantage_api_key.json  test_api_keys-test_create_read_only_vantage_api_key.json  test_api_keys-test_delete_external_api_key.json  test_api_keys-test_delete_non_existing_external_api_key.json  test_api_keys-test_get_external_api_key.json  test_api_keys-test_get_external_api_keys.json  test_api_keys-test_get_non_existing_external_api_key.json  test_api_keys-test_get_non_existing_vantage_api_key.json  test_api_keys-test_get_vantage_api_key.json  test_api_keys-test_get_vantage_api_key_using_nonexisting_account.json  test_api_keys-test_get_vantage_api_keys.json  test_api_keys-test_get_vantage_api_keys_using_nonexisting_account.json  test_api_keys-test_revoke_vantage_api_key.json  test_api_keys-test_update_external_api_key.json  test_api_keys-test_update_non_existing_external_api_key.json  test_collection-test_create_collection_with_user_embeddings.json  test_collection-test_create_semantic_query_suggestions_configuration.json  test_collection-test_create_vantage_managed_embeddings_collection.json  test_collection-test_delete_collection.json  test_collection-test_delete_non_existing_collection.json  test_collection-test_delete_semantic_query_suggestions_configuration.json  test_collection-test_disable_semantic_query_suggestions_configuration.json  test_collection-test_get_collection.json  test_collection-test_get_collection_status.json  test_collection-test_get_non_existing_collection.json  test_collection-test_get_semantic_query_suggestions_configuration.json  test_collection-test_list_collections.json  test_collection-test_list_semantic_query_suggestions_configurations.json  test_collection-test_rollback_semantic_query_suggestions_configuration.json  test_collection-test_update_collection-get.json  test_collection-test_update_collection.json  (+71 more)
tests/data/tmp/: test_documents-test_documents_upload_from_jsonl_file.json
tests/data/wiremock/: GET__account_test.json
tests/integration_tests/: .env-example  conftest.py  mock-env  test_account.py  test_api_keys.py  test_collection.py  test_documents.py  test_search.py  test_shopping_assistant.py  test_sqs.py  test_vantage_vibe.py  utilities.py
tests/integration_tests/configuration/: client.py  loader.py  mock_api.py
tests/integration_tests/configuration/fixtures/: account.py  api.py  collection.py  documents.py  keys.py  search.py
tests/unit_tests/: test_documents.py
vantage/: __init__.py  config.py  exceptions.py  model.py  utils.py  vantage.py
vantage/core/: base.py  exceptions.py
vantage/core/http/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
vantage/core/http/api/: __init__.py  account_management_api.py  collection_management_api.py  documents_api.py  external_api_keys_api.py  external_keys_api.py  search_api.py  vantage_api_keys_api.py
vantage/core/http/models/: __init__.py  account.py  account_modifiable.py  account_read_only.py  collection.py  collection_immutable.py  collection_modifiable.py  collection_read_only.py  collection_upload_url.py  collections_result.py  collections_result_collections_inner.py  collections_result_inner.py  create_collection_request.py  document_batch.py  embedding_search_query.py  embedding_search_query_filter.py  ml_these.py  (+33 more)
vantage/core/management/: __init__.py  management.py
vantage/core/search/: __init__.py  search.py
vantage/model/: account.py  collection.py  keys.py  search.py
vantage_sdk/: __init__.py  client.py  config.py  vantage.py
vantage_sdk/core/: __init__.py  base.py  exceptions.py  text_util.py  validation.py
vantage_sdk/core/document/: __init__.py  document.py
vantage_sdk/core/http/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
vantage_sdk/core/management/: __init__.py  management.py
vantage_sdk/core/search/: __init__.py  search.py
vantage_sdk/model/: __init__.py  account.py  collection.py  document.py  keys.py  search.py  validation.py
(+106 files in other folders)
