[tool]
[tool.poetry]
name = "vantage-sdk"
version = "0.9.5"
description = "Vantage Python SDK."
authors = ["Vantage <none@vantage.com>"]
readme = "README.md"
repository = "https://github.com/VantageDiscovery/vantage-sdk-python"
documentation = "https://docs.vantagediscovery.com/docs/concepts"
classifiers=[
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "vantage_sdk" },
    { include = "tests", format = "sdist" },
]

include = [
    { path = "examples", format = "sdist" },
    { path = "docs", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = ">=2"
black  = { version = "^23.0", optional = true}
isort  = { version = "^5.8.0", optional = true}
flake8  = { version = "^5.0.1", optional = true}
requests = ">=2, <3"
urllib3 = ">=2, <3"
python-dateutil = ">=2, <3"
flake8-docstrings = { version = "^1.6.0", optional = true }
flake8-pyproject = { version = "^1.2.3", optional = true }
mypy = {version = "^1.5", optional = true}
pytest  = { version = "^7.2.0", optional = true}
pytest-cov  = { version = "^4.0.0", optional = true}
pytest-env = ">=1.1.3"
tox  = { version = "^4.0.0", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "*", optional = true}
twine  = { version = "^4.0.2", optional = true}
pre-commit = {version = "^3.3.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
mkdocs = {version = "^1.6.0", optional = true}
mkdocs-material = {version = "^9.5.23", optional = true}
mkdocs-include-markdown-plugin = {version = "^6.0.6", optional = true}
python-dotenv = ">=1.0.1"
bumpver = {version = ">=2023.1129"}
pip-tools = {version = ">=7.3.0"}
mkdocstrings = {version = ">=0.25.1", extras = ["python"]}
griffe-fieldz = {version = ">= 0.1.2"}
tiktoken = {version = ">=0.7.0"}
pyarrow = {version = ">=16.1.0"}
pandas = "^2.2.2"
python-magic = {version = ">=0.4,<=0.5"}

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "flake8-pyproject",
    "pytest-cov",
    "pytest-env"
    ]


dev = [
    "tox",
    "pre-commit",
    "virtualenv",
    "pip",
    "toml",
    "bump2version",
    "python-dotenv",
    "bumpver",
    "pip-tools",
    ]


publish = [
    "twine",
]


doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    ]


[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
exclude = "vantage_sdk/core/http"
extend-ignore = [
    "D100",
    "D101",
    "D102",
    "D104",
    "D107"
]

[tool.mypy]
exclude = "vantage_sdk/core/http"

[bumpver]
current_version = "0.9.5"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"vantage_sdk/__init__.py" = [
    "__version__ = '{version}'",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
